Results dataset testing

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -451,6 +451,7 @@
                 label = '{{ _('Microbiomes in the Environment') }}';
                 span_id = "#dataset_links_builtenv";
                 break;
+            case "tmi-WGS-gut":
             case "tmi-16S-gut":
                 label = '{{ _('The Microsetta Initiative') }}';
                 span_id = "#dataset_links_tmi";
