Add study 11546 to results

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -444,7 +444,8 @@
                              "12142": ["The National FINRISK Study ", "https://www.nature.com/articles/s41467-021-22962-y"],
                              "1926": ["Structure, function and diversity of the healthy human microbiome", "https://www.nature.com/articles/nature11234"],
                              "11484": ["Multi-omics of the gut microbial ecosystem in inflammatory bowel diseases", "https://pubmed.ncbi.nlm.nih.gov/31142855/"],
-                             "11405": ["The effect of legume supplementation on the gut microbiota in rural Malawian infants aged 6 to 12 months ", "https://pubmed.ncbi.nlm.nih.gov/32047925/"]
+                             "11405": ["The effect of legume supplementation on the gut microbiota in rural Malawian infants aged 6 to 12 months ", "https://pubmed.ncbi.nlm.nih.gov/32047925/"],
+                             "11546": ["Gastrointestinal Surgery for Inflammatory Bowel Disease Persistently Lowers Microbiome and Metabolome Diversity", "https://pubmed.ncbi.nlm.nih.gov/33026068/"]
         }
         switch (name) {
             case "builtenv-16S-allsamples":
