--- a/microsetta_interface/templates/new_participant.jinja2
+++ b/microsetta_interface/templates/new_participant.jinja2
@@ -211,19 +211,27 @@
 {% block content%}
 
 <div class="container default-container">
-    {% if reconsent is not none %}
+    {% if reconsent != None %}
         <div id="consent_alert" class="alert alert-consent" role="alert">
             <strong>{{ _('Your consent is needed to proceed.') }}</strong><br />
             {{ _('We\'ve made some changes to the project since you last logged in, including an update to our consent agreement. To proceed, please provide your updated consent.') }}
         </div>
     {% endif %}
-    {% if age_range != None %}
-        <input type="hidden" name="age-range" value="{{ age_range }}" />
+    {% if form_type == "biospecimen" %}
         <div class="row mb-4">
             <div class="col-12 biospecimen-alert">
                 {{ _('Signature and agreement of this consent form is required to process your sample(s).') }}
             </div>
         </div>
+    {% else %}
+        <div class="row mb-4">
+            <div class="col-12 biospecimen-alert">
+                {{ _('Signature and agreement of this consent form is required to update your information.') }}
+            </div>
+        </div>
+    {% endif %}
+    {% if age_range != None %}
+        <input type="hidden" name="age-range" value="{{ age_range }}" />
     {% else %}
     <div class="row">
         <div class="col-12">
