--- a/microsetta_interface/templates/sample.jinja2
+++ b/microsetta_interface/templates/sample.jinja2
@@ -190,6 +190,19 @@
     <input id="sample_date_normalized" name="sample_date_normalized" type="hidden" value="{{ sample.date | e }}" />
 
     <div class="container profile-container">
+        {% if need_reconsent_data or need_reconsent_biospecimen %}
+            <div id="consent_alert" class="alert alert-consent mt-4" role="alert">
+                {{ _('To update your existing samples or contribute new samples, please review the following:') }}<br />
+                <ul>
+                {% if need_reconsent_data %}
+                    <li><a href="/accounts/{{account_id}}/sources/{{source_id}}/reconsent/data">Consent to Act as a Research Subject</a></li>
+                {% endif %}
+                {% if need_reconsent_biospecimen %}
+                    <li><a href="/accounts/{{account_id}}/sources/{{source_id}}/reconsent/biospecimen">Consent to Act as a Research Subject - Biospecimen and Future Use Research</a></li>
+                {% endif %}
+                </ul>
+            </div>
+        {% endif %}
         <div class="card mt-4 p-4">
             <div class="row barcode-row">
                 <div class="barcode-col">
@@ -240,7 +253,9 @@
                             <span class="kit-tooltip-text">{{ _('Your sample has been received by our lab and can no longer be edited. Please <a href="mailto:microsetta@ucsd.edu">contact us</a> with any questions.') }}</span>
                             {% else %}
                                 <button class="btn btn-white-blue-border m-2" name="cancel_button" onClick="return goToKits();">{{ _('Cancel') }}</button>
-                                <button type="submit" class="btn btn-blue-gradient m-2" name="kit_id_button" id="kit_id_button">{{ _('Save') }}</button>
+                                {% if not need_reconsent_data and not need_reconsent_biospeciment %}
+                                    <button type="submit" class="btn btn-blue-gradient m-2" name="kit_id_button" id="kit_id_button">{{ _('Save') }}</button>
+                                {% endif %}
                             {% endif %}
                         </div>
                     </div>
