--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1366,7 +1366,7 @@
                 <img class="diversity-banner" src='/static/img/{{ _(EN_US_KEY) }}/hero-home-4-xl.jpeg'>
                 <br/><br />
                 <p>
-                    {{ _('There are 40 trillion microbial cells in our bodies. This collection of microbial cells is known as the human microbiome. With roughly 3lbs (1.4kgs) of them in our gut alone, we\'re on a mission to make critical discoveries about their role in our lives. Thank you for contributing to our research project and helping advance the science.') }}
+                    {{ _('There are 40 trillion microbial cells in our bodies. This collection of microbial cells is known as the human microbiome. With roughly 1lb (.45kgs) of them in our gut alone, we\'re on a mission to make critical discoveries about their role in our lives. Thank you for contributing to our research project and helping advance the science.') }}
                 </p>
 
                 <p>
