--- a/microsetta_interface/templates/kits.jinja2
+++ b/microsetta_interface/templates/kits.jinja2
@@ -258,7 +258,7 @@
                                     </div>
                                 {% else %}
                                     <div class="barcode-col barcode-warning-text barcode-col-hide-mobile">
-                                        Info Needed
+                                        {{ _('Info Needed') }}
                                     </div>
                                 {% endif %}
                                 <div class="barcode-col barcode-col-end" id="btn-view-{{ sample.sample_id }}">
