Fix for legacy sources + report breadcrumb

--- a/microsetta_interface/templates/new_participant.jinja2
+++ b/microsetta_interface/templates/new_participant.jinja2
@@ -230,7 +230,7 @@
             </div>
         </div>
     {% endif %}
-    {% if age_range != None %}
+    {% if age_range is not none and age_range != 'legacy' %}
         <input type="hidden" name="age-range" value="{{ age_range }}" />
     {% else %}
     <div class="row">
