--- a/microsetta_interface/templates/kits.jinja2
+++ b/microsetta_interface/templates/kits.jinja2
@@ -302,7 +302,8 @@
 {{ _('2. Add the date and time of sample collection and select the sample type taken.') }}<br />
 <span class='kit-important'>{{ _('Important') }}:</span> <br />
 {{ _('The sample cannot be processed in the lab until this information is complete.') }} <br />
-{{ _('Keep a record of these details. The barcode is needed to resolve any issues you may have with your sample collection.') }}</i></span>" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="top" title="">{{ _('What is the barcode and why is it important?') }}</a></span></p><br />
+{{ _('Keep a record of these details. The barcode is needed to resolve any issues you may have with your sample collection.') }}<br />
+{{ _('If the barcode(s) listed do not match the barcode(s) on your collection device(s), please contact us at <a href=\'mailto:microsetta@ucsd.edu\'>microsetta@ucsd.edu</a>.') }}</i></span>" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="top" title="">{{ _('What is the barcode and why is it important?') }}</a></span></p><br />
                         <form method="post" name="pick_samples_form" id="pick_samples_form" action="/accounts/{{account_id}}/sources/{{source_id}}/claim_samples" style="padding: 0;">
                         <div class="new_kit_sample_container" id="new_kit_sample_container">
 
