--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -24,12 +24,18 @@
 {% endblock %}
 {% block content %}
     <div class="container profile-container">
+    {% if data_consent is none and biospecimen_consent is none %}
+        <div id="consent_alert" class="alert alert-consent" role="alert">
+            {{ _('<strong>Please note</strong>: Since you opted to not update your consent agreement, you may not view an online copy of your consent document(s).') }}
+        </div>
+    {% endif %}
         <div class="card mt-4 p-4">
             <div class="row">
                 <div class="col-12">
                     <h1>{{ _('Consent Documents') }}</h1>
                 </div>
             </div>
+            {% if data_consent is not none %}
             <div class="row">
                 <div class="col-12">
                     <div class="card p-4 mt-4">
@@ -46,6 +52,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% if biospecimen_consent is not none %}
             <div class="row">
                 <div class="col-12">
