--- a/microsetta_interface/templates/nutrition.jinja2
+++ b/microsetta_interface/templates/nutrition.jinja2
@@ -125,6 +125,11 @@
     </div>
     {% else %}
     <div class="container profile-container">
+        {% if need_reconsent_data %}
+            <div id="consent_alert" class="alert alert-consent" role="alert">
+                {{ _('<strong>Please note</strong>: Since you opted to not update your consent agreement, you may not begin new FFQs or continue existing ones.') }}
+            </div>
+        {% endif %}
         {% if not has_basic_info %}
         <div class="alert alert-primary alert-nutrition mt-4" role="alert">
             {{ _('It looks like you have not completed the Basic Information survey yet. If you begin your FFQ without providing your height, weight, age, and gender on the Basic Information survey, you will not receive an accurate FFQ report.') }} - <a href="/accounts/{{ account_id }}/sources/{{ source_id }}">{{ _('My Profile') }}</a>
@@ -169,6 +174,7 @@
             </div>
             {% if vio_reg_entries|length > 0 %}
                 {% for vio in vio_reg_entries %}
+                {{ vio }}
                 <div class="row mt-3">
                     <div class="barcode-col ffq-text">
                         {{ vio.creation_time }}
@@ -177,16 +183,20 @@
                         {% if vio.vioscreen_status == 3 %}
                             <a href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{ vio.survey_id }}/reports/topfoodreport/pdf" class="btn btn-white-blue-border" role="button" onClick="return disable_link(this);">{{ _('Download Top Food Report') }}</a>
                         {% else %}
-                            {% if vio.sample_id is not none %}
-                                <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?sample_id={{ vio.sample_id }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);" target="_blank">{{ _('Continue FFQ') }}</a>
-                            {% else %}
-                                <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?registration_code={{ vio.registration_code }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);" target="_blank">
-                                    {% if new_ffq_code == vio.registration_code %}
-                                        {{ _('Begin FFQ') }}
-                                    {% else %}
-                                        {{ _('Continue FFQ') }}
-                                    {% endif %}
-                                </a>
+                            {% if need_reconsent_data %}
+                                {% if vio.sample_id is not none %}
+                                    <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?sample_id={{ vio.sample_id }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);" target="_blank">{{ _('Continue FFQ') }}</a>
+                                {% elif vio.registration_code is not none %}
+                                    <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?registration_code={{ vio.registration_code }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);" target="_blank">
+                                        {% if new_ffq_code == vio.registration_code %}
+                                            {{ _('Begin FFQ') }}
+                                        {% else %}
+                                            {{ _('Continue FFQ') }}
+                                        {% endif %}
+                                    </a>
+                                {% else %}
+                                    <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?vio_id={{ vio.survey_id }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);" target="_blank">{{ _('Continue FFQ') }}</a>
+                                {% endif %}
                             {% endif %}
                         {% endif %}
                     </div>
@@ -200,7 +210,7 @@
                         <div class="col-12 text-center">
                             <div class="kit_id_container">
                                 <label for="ffq_code" name="ffq_code_name" class="tmi-content">{{ _('Registration Code') }}:</label><br />
-                                <input type="text" name="ffq_code" id="ffq_code" class="form-control" placeholder="XXXXXXXXXX" onKeyUp="updateButtonState(this.value);"/>
+                                <input type="text" name="ffq_code" id="ffq_code" class="form-control" placeholder="TMI-XXXXX-XXXXX-XXXXX" onKeyUp="updateButtonState(this.value);"/>
                                 <label for="ffq_code" class="error kit-validation-error" style="display: none"></label>
                             </div>
                         </div>
