--- a/microsetta_interface/templates/reports.jinja2
+++ b/microsetta_interface/templates/reports.jinja2
@@ -42,6 +42,12 @@
             });
         }
 
+        function disable_link(link_obj) {
+            link_obj.style.opacity = .65;
+            link_obj.style.pointerEvents = "none";
+            return true;
+        }
+
         // Wait for the DOM to be ready
         $(document).ready(function(){
             {% for sample in samples %}
