--- a/microsetta_interface/templates/nutrition.jinja2
+++ b/microsetta_interface/templates/nutrition.jinja2
@@ -174,7 +174,6 @@
             </div>
             {% if vio_reg_entries|length > 0 %}
                 {% for vio in vio_reg_entries %}
-                {{ vio }}
                 <div class="row mt-3">
                     <div class="barcode-col ffq-text">
                         {{ vio.creation_time }}
@@ -183,7 +182,7 @@
                         {% if vio.vioscreen_status == 3 %}
                             <a href="/accounts/{{account_id}}/sources/{{source_id}}/surveys/{{ vio.survey_id }}/reports/topfoodreport/pdf" class="btn btn-white-blue-border" role="button" onClick="return disable_link(this);">{{ _('Download Top Food Report') }}</a>
                         {% else %}
-                            {% if need_reconsent_data %}
+                            {% if not need_reconsent_data %}
                                 {% if vio.sample_id is not none %}
                                     <a href="/accounts/{{account_id}}/sources/{{source_id}}/vioscreen_ffq?sample_id={{ vio.sample_id }}" class="btn btn-blue-gradient" role="button" onClick="return disable_link(this);" target="_blank">{{ _('Continue FFQ') }}</a>
                                 {% elif vio.registration_code is not none %}
