--- a/microsetta_interface/templates/consents.jinja2
+++ b/microsetta_interface/templates/consents.jinja2
@@ -44,7 +44,7 @@
                                 <h2>{{ _('Survey') }}</h2>
                             </div>
                             <div class="consent-col col-end">
-                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/data/view" class="consent-link" target="_blank">
+                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/data/view" class="consent-link">
                                     <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> {{ _('View') }}
                                 </a>
                             </div>
@@ -62,7 +62,7 @@
                                 <h2>{{ _('Biospecimen') }}</h2>
                             </div>
                             <div class="consent-col col-end">
-                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/biospecimen/view" class="consent-link" target="_blank">
+                                <a href="/accounts/{{ account_id }}/sources/{{ source_id }}/consents/biospecimen/view" class="consent-link">
                                     <img src="/static/img/pdf.svg" height="20" width="20" class="me-1"/> {{ _('View') }}
                                 </a>
                             </div>
