Add perk fulfillment toggle to Admin UI

--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -119,9 +119,10 @@
 
     {% if admin_mode %}
     <nav class="navbar fixed-top navbar-light bg-warning shadow">
-      {{ _('Administrator Toolbar') }}
+      {{ _('Admin Tools') }}
       <a class="btn btn-outline-success" href="/admin/system_message">{{ _('System Panel') }}</a>
-      <a class="btn btn-outline-success" href="/admin/emperor_playground">{{ _('Emperor Playground') }}</a>
+      <a class="btn btn-outline-success" href="/admin/emperor_playground">{{ _('Emperor') }}</a>
+      <a class="btn btn-outline-success" href="/admin/perk_fulfillment_state">{{ _('Perk Fulfillment') }}</a>
       <a class="btn btn-outline-success" href="/admin/interested_users">{{ _('Interested Users') }}</a>
       <a class="btn btn-outline-success" href="/admin/address_verification">{{ _('Address Verification') }}</a>
       <a class="btn btn-outline-success" href="/admin/campaigns/list">{{ _('Campaigns') }}</a>
